--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -40,15 +40,6 @@ jobs:
           TAG="auto-$(date -u +'%Y%m%d-%H%M%S')"
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
 
-      - name: Create git tag
-        env:
-          TAG: ${{ steps.release_tag.outputs.tag }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag -a "$TAG" -m "Automated release $TAG"
-          git push origin "$TAG"
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -63,3 +54,13 @@ jobs:
           tags: |
             ${{ env.IMAGE_NAME }}:${{ steps.release_tag.outputs.tag }}
             ${{ env.IMAGE_NAME }}:latest
+
+      - name: Create git tag
+        if: ${{ success() }}
+        env:
+          TAG: ${{ steps.release_tag.outputs.tag }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a "$TAG" -m "Automated release $TAG"
+          git push origin "$TAG"
