--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ requests>=2.31.0,<3.0.0
 
 # Pydantic is a dependency of FastAPI but explicitly listed for clarity
 pydantic>=2.0.0,<3.0.0
+
+# Worksheet rendering helpers
+Pillow>=10.0.0,<11.0.0
