--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,11 @@ repos:
         name: black (repo formatting)
         language_version: python3
         files: "\\.py$"
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.1.0
+    hooks:
+      - id: prettier
+        name: prettier (frontend formatting)
+        files: "^frontend/.*\\.(ts|tsx|js|jsx|json|css|md)$"
+
+
